--- a/dots/.config/swaync/style.css
+++ b/dots/.config/swaync/style.css
@@ -10,7 +10,7 @@
 
   all: unset;
   font-size: 14px;
-  font-family: "JetBrains Mono Nerd Font 10";
+  font-family: "JetBrains Mono Nerd Font";
   transition: 200ms;
 }
 
@@ -207,7 +207,7 @@
 
 .widget-buttons-grid > flowbox > flowboxchild > button {
   margin: 4px 10px;
-  padding: 6px 12px;
+  padding: 6px 10px;
   background: transparent;
   border-radius: 8px;
 }
