--- a/dots/.config/swaync/central_control.css
+++ b/dots/.config/swaync/central_control.css
@@ -2,70 +2,102 @@
 @define-color background-alt  #1A1B26;
 @define-color selected        #82aaff;
 @define-color hover           alpha(#B4F9F8, .5);
-@define-color urgent          @color2;
 @define-color border-sec      #2f3549;
 @define-color bg-sec          #444b6a;
+@define-color urgent          @color2;
 
 * {
-  color:            @text;
+  color: @text;
 
   all: unset;
   font-size: 14px;
   font-family: "JetBrains Mono Nerd Font 10";
   transition: 200ms;
-
 }
 
 /* Avoid 'annoying' backgroud */
-.blank-window {  
-  background: transparent;  
+.blank-window {
+  background: transparent;
 }
-  
+
 /* CONTROL CENTER ------------------------------------------------------------------------ */
 
 .control-center {
-  background: alpha(#16161e, .85);
+  background: alpha(@background, 0.55);
   border-radius: 24px;
   border: 1px solid @selected;
-  box-shadow: 0 0 10px 0 rgba(0,0,0,.6);
-  margin: 12px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+  margin: 18px;
   padding: 12px;
 }
 
 /* Notifications  */
 .control-center .notification-row .notification-background,
-.control-center .notification-row .notification-background .notification.critical {
+.control-center
+  .notification-row
+  .notification-background
+  .notification.critical {
   background-color: @background-alt;
   border-radius: 16px;
   margin: 4px 0px;
   padding: 4px;
 }
 
-.control-center .notification-row .notification-background .notification.critical {
+.control-center
+  .notification-row
+  .notification-background
+  .notification.critical {
   color: @urgent;
 }
 
-.control-center .notification-row .notification-background .notification .notification-content {
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  .notification-content {
   margin: 6px;
   padding: 8px 6px 2px 2px;
 }
 
-.control-center .notification-row .notification-background .notification > *:last-child > * {
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > * {
   min-height: 3.4em;
 }
 
-.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action {
-  background: alpha(@selected, .6);
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action {
+  background: alpha(@selected, 0.6);
   color: @text;
   border-radius: 12px;
   margin: 6px;
 }
 
-.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:hover {
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action:hover {
   background: @selected;
 }
 
-.control-center .notification-row .notification-background .notification > *:last-child > * .notification-action:active {
+.control-center
+  .notification-row
+  .notification-background
+  .notification
+  > *:last-child
+  > *
+  .notification-action:active {
   background-color: @selected;
 }
 
@@ -83,7 +115,10 @@
   background-color: @selected;
 }
 
-.control-center .notification-row .notification-background .close-button:active {
+.control-center
+  .notification-row
+  .notification-background
+  .close-button:active {
   background-color: @selected;
 }
 
@@ -94,17 +129,16 @@ trough {
 }
 
 progressbar {
-  background-color: rgba(255,255,255,.1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 /* Notifications expanded-group */
 
 .notification-group {
   margin: 2px 8px 2px 8px;
-
 }
 .notification-group-headers {
-  /* font-weight: bold; */
+  font-weight: bold;
   font-size: 1.25rem;
   color: @text;
   letter-spacing: 2px;
@@ -118,7 +152,7 @@ progressbar {
 .notification-group-close-all-button {
   background: transparent;
   color: @text;
-  margin: 4px; 
+  margin: 4px;
   border-radius: 6px;
   padding: 4px;
 }
@@ -126,11 +160,11 @@ progressbar {
 .notification-group-collapse-button:hover,
 .notification-group-close-all-button:hover {
   background: @hover;
-}  
+}
 
 /* WIDGETS --------------------------------------------------------------------------- */
 
-  /* Notification clear button */
+/* Notification clear button */
 .widget-title {
   font-size: 1.2em;
   margin: 6px;
@@ -150,7 +184,7 @@ progressbar {
   background-color: @selected;
 }
 
-  /* Do not disturb */
+/* Do not disturb */
 .widget-dnd {
   margin: 6px;
   font-size: 1.2rem;
@@ -181,7 +215,7 @@ progressbar {
   border-radius: 6px;
 }
 
-  /* Buttons menu */
+/* Buttons menu */
 .widget-buttons-grid {
   font-size: x-large;
   padding: 6px 2px;
@@ -190,41 +224,40 @@ progressbar {
   background: @background-alt;
 }
 
-.widget-buttons-grid>flowbox>flowboxchild>button {
+.widget-buttons-grid > flowbox > flowboxchild > button {
   margin: 4px 10px;
   padding: 6px 12px;
   background: transparent;
   border-radius: 8px;
 }
 
-.widget-buttons-grid>flowbox>flowboxchild>button:hover {
+.widget-buttons-grid > flowbox > flowboxchild > button:hover {
   background: @hover;
 }
 
-
-  /* Music player */
+/* Music player */
 .widget-mpris {
-    background: @background-alt;
-    border-radius: 16px;
-    color: @text;
-    margin:  20px 6px;
+  background: @background-alt;
+  border-radius: 16px;
+  color: @text;
+  margin: 20px 6px;
 }
 
-  /* NOTE: Background need *opacity 1* otherwise will turn into the album art blurred  */
+/* NOTE: Background need *opacity 1* otherwise will turn into the album art blurred  */
 .widget-mpris-player {
-    background-color: @background-sec;
-    border-radius: 22px;
-    padding: 6px 14px;
-    margin: 6px;
+  background-color: @background-sec;
+  border-radius: 22px;
+  padding: 6px 14px;
+  margin: 6px;
 }
 
 .widget-mpris > box > button {
   color: @text;
   border-radius: 20px;
 }
- 
+
 .widget-mpris button {
-  color: alpha(@text, .6);
+  color: alpha(@text, 0.6);
 }
 
 .widget-mpris button:hover {
@@ -234,15 +267,15 @@ progressbar {
 .widget-mpris-album-art {
   border-radius: 16px;
 }
- 
+
 .widget-mpris-title {
-    font-weight: 700;
-    font-size: 1rem;
+  font-weight: 700;
+  font-size: 1rem;
 }
- 
+
 .widget-mpris-subtitle {
-    font-weight: 500;
-    font-size: 0.8rem;
+  font-weight: 500;
+  font-size: 0.8rem;
 }
 
 /* Volume */
@@ -252,25 +285,4 @@ progressbar {
   padding: 4px;
   margin: 6px;
   border-radius: 6px;
-}
-
-.summary {
-  font-size: 14px;
-  font-weight: bold;
-  max-height: 20px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  color: red;
-}
-
-.body {
-  font-size: 12px;
-  max-height: 20px;
-  overflow: hidden;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  line-height: 1.3;
-  margin-top: 4px;
-  margin-bottom: 8px;
 }
